--- a/smooth.html
+++ b/smooth.html
@@ -27,12 +27,17 @@
 		<div id="toolbox">
 			<label>
 				<span>Passes</span>
-				<input type="range" min=1 max=30 value=2 id="passes" />
-				<span class="out">2</span>
+				<input type="range" min=1 max=30 value=5 id="passes" />
+				<span class="out">5</span>
 			</label>
 			<label>
 				<span>Smoothing</span>
-				<input type="range" min=1 max=30 value=2 id="smoothing" />
+				<input type="range" min=1 max=30 value=10 id="smoothing" />
+				<span class="out">10</span>
+			</label>
+			<label>
+				<span>Stroke</span>
+				<input type="range" min=1 max=10 value=2 id="stroke" />
 				<span class="out">2</span>
 			</label>
 		</div>
