--- a/smooth.html
+++ b/smooth.html
@@ -40,6 +40,8 @@
 				<input type="range" min=1 max=10 value=2 id="stroke" />
 				<span class="out">2</span>
 			</label>
+
+			<button id="undo">Undo</button>
 		</div>
 	</body>
 </html>
