--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Smoothing the Free-Hand drawing</title>
-		<script src="smooth.js"></script>
+		<script src="freehand.js"></script>
 <style>
 #visual {
 	height: 80vh;
