Add some toolbox styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 	height: 100%;
 	background-color: blanchedalmond;
 }
+#toolbox {
+	display: flex;
+	align-items: end;
+}
+label {
+	margin-right: 1em;
+}
+label span {
+	display: block;
+}
+label span.out {
+	display: inline;
+}
 </style>
 	</head>
 	<body>
