Add per-line color tracking

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@ label span.out {
 				<input type="range" min=1 max=10 value=2 id="stroke" />
 				<span class="out">2</span>
 			</label>
+			<label>
+				<span>Color</span>
+				<input type="color" id="foreground" />
+			</label>
 
 			<button id="undo">Undo</button>
 			<button id="download-svg">SVG</button>
