--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ label span.out {
 			</label>
 
 			<button id="undo">Undo</button>
+			<button id="crop">Crop</button>
 			<button id="download-svg">SVG</button>
 
 			<div class="plus">
